# Deepstack

./: .dockerignore  .gitignore  .pre-commit-config.yaml  2025-12-18-this-session-is-being-continued-from-a-previous-co.txt  CHANGELOG.md  Dockerfile  FEATURES.md  ORCHESTRATOR_FIX_VALIDATION_REPORT.md  PAPER_TRADER_IMPLEMENTATION_REPORT.md  PIPELINE_STATUS.md  PREDICTION_MARKETS_IMPLEMENTATION.md  PREDICTION_MARKETS_README.md  PREDICTION_MARKETS_USAGE.md  README.md  TASK_3.1_KELLY_CRITERION_COMPLETION.md  TASK_5.2_DELIVERY_SUMMARY.md  TASK_6.1_OPTIONS_STRATEGIES_DELIVERY.md  TASK_6.2_SQUEEZE_HUNTER_DELIVERY.md  TASK_7.1_REGIME_DETECTOR_DELIVERY.md  TASK_8.1_PSYCHOLOGY_MODULE_DELIVERY.md  TASK_8.2_PRODUCTION_DEPLOYMENT_DELIVERY.md  TEST_SUMMARY.md  VALIDATION_SCORING_IMPLEMENTATION.md  WATCHLIST_FEATURES.md  code_change_impact_report.md  deepsignals-skill.md  env.example  env.production.example  market_api.py  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.json  regression_test_results.md  requirements-prod.txt  requirements.txt  test_import.py  test_prediction_markets.py  test_quality_validation.md  (+1 more)
.agent/workflows/: verify-google-oauth.md
.cursor/plans/: phase-1-verification-d5b13845.plan.md
.github/workflows/: test.yml
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: app.tsx
config/: config.yaml  risk_limits.yaml  voice_config.py
core/: ARCHITECTURE_DIAGRAM.txt  IMPLEMENTATION_DETAILS.md  QUICK_REFERENCE.md  YAHOO_FINANCE_FALLBACK_SUMMARY.md  api_server.py  config.py  exceptions.py  orchestrator.py
data/: analytics.db  deepstack.db  paper_trading.db
docs/: 01-PHASE-1-GUIDE.md  BUILD_PLAN.md  DECISIONS.md  DEPLOYMENT_GUIDE.md  KELLY_CRITERION.md  LEARNINGS.md  OPTIONS_STRATEGIES.md  PAPER_TRADING.md  PRODUCTION_DEPLOYMENT.md  PROGRESS.md  PSYCHOLOGY_MODULE.md  REGIME_DETECTION.md  ROADMAP.md  SOUL.md  SQUEEZE_HUNTER.md  SQUEEZE_HUNTER_QUICK_START.md  TAX_LOSS_HARVESTING_ALPHA.md  TRADING_BRAIN.md  WASH_SALE_TRACKING.md  alpaca_websocket_integration.md
examples/: alphavantage_integration_example.py  execution_demo.py  kelly_criterion_example.py  options_demo.py  paper_trading_example.py  psychology_demo.py  regime_detector_demo.py  squeeze_hunter_demo.py  tax_loss_harvesting_demo.py
knowledge-base/: trader_philosophies.yaml
scripts/: com.deepstack.deepsignals-collector.plist  deepsignals_alerts.py  deepsignals_collector.py  validate_alphavantage.py  validate_orchestrator_fix.py  verify_crypto.py  verify_news.py
tests/: README.md  conftest.py  e2e_token_system.py  test_api_error_handling.py  test_error_integration.py  test_exceptions.py
web/: .env.example  .gitignore  EMBEDDING_PIPELINE_SUMMARY.md  PHASE_3A_VERIFICATION_GUIDE.md  PHASE_4A_SUMMARY.md  README.md  SENTRY_ACTIVATION_CHECKLIST.md  SENTRY_INTEGRATION_SUMMARY.md  TESTING_PHASE_4B_SUMMARY.md  TEST_SUMMARY.md  capacitor.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  vitest.config.ts  vitest.integration.config.ts
(+976 files in other folders)
