[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepstack"
version = "0.1.0"
description = "AI-powered algorithmic trading system"
authors = [{name = "DeepStack Team"}]
readme = "README.md"
requires-python = ">=3.9"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name (allow short names like 'e')
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0801",  # Duplicate code (expected in trading system)
    "R0902",  # Too many instance attributes (complex trading objects)
    "R0903",  # Too few public methods (data classes)
    "R0911",  # Too many return statements
    "R0912",  # Too many branches
    "R0913",  # Too many arguments (trading functions need many params)
    "R0914",  # Too many local variables
    "R0915",  # Too many statements
    "W0718",  # Broad exception catching (acceptable in trading system)
    "W1203",  # Lazy logging (will fix later)
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.basic]
good-names = ["i", "j", "k", "e", "f", "df", "x", "y", "_"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
strict_optional = false
warn_no_return = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --strict-markers --cov=core --cov-report=html --cov-report=json --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Fast, isolated unit tests",
    "integration: Integration tests",
    "backtesting: Backtest tests",
    "slow: Slow running tests",
    "broker: Tests requiring broker connection",
    "live: Live system tests",
    "asyncio: Async tests that require event loop",
]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_file = "tests/logs/pytest.log"
log_file_level = "DEBUG"

[tool.coverage.run]
source = ["core"]
branch = true
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "core/cli/*",  # CLI dashboard is interactive, hard to test
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"
